ubuntu-release-upgrader (1:0.202) UNRELEASED; urgency=low

  [ Brian Murray ]
  * DistUpgradeQuirks.py: when removing .crash files also remove whoopsie
    .upload and .uploaded files
  * Remove some additional unnecessary quirks

  [ Steve Langasek ]
  * Drop all quirks for upgrades prior to the karmic->lucid upgrade; all
    releases earlier than 10.04 are entirely EOLed, and in any case users
    should not be upgrading directly from such old releases to 13.10 or
    later without going through the intermediate LTS releases, so this is
    all dead code.
  * Drop use of base-installer for detecting "recommended" kernels for the
    hardware.  So far this code was only ever used for a one-time transition
    when more specialized kernel flavors became available on i386 that were
    preferred over the -386 flavor, and in the meantime the code is causing
    wrong results on upgrade for users of UbuntuStudio, which ships a kernel
    flavor that's not known by base-installer.  LP: #1220898.

 -- Brian Murray <brian@ubuntu.com>  Fri, 06 Sep 2013 13:15:29 -0700

ubuntu-release-upgrader (1:0.201) saucy; urgency=low

  [ Colin Watson ]
  * DistUpgrade/DistUpgradeController.py: Fix "alllowed" typo.

  [ Brian Murray ]
  * DistUpgrade/DevelReleaseAnnouncement: indicate that it is a Beta now

 -- Brian Murray <brian@ubuntu.com>  Thu, 05 Sep 2013 10:07:13 -0700

ubuntu-release-upgrader (1:0.200) saucy; urgency=low

  * DistUpgradeFetcher.py: Properly pass Gtk.window to error (LP: #1199984)
  * ubuntu-release-upgrader-gtk: depend on gir1.2-webkit-3.0 (LP: #1215526)

 -- Brian Murray <brian@ubuntu.com>  Thu, 22 Aug 2013 09:48:10 -0700

ubuntu-release-upgrader (1:0.199) saucy; urgency=low

  * Drop obsolete GObject.threads_init() calls to avoid warnings.  Bump
    python-gi dependency.
  * Update release version in DistUpgradeQuirks.py (LP: #1202826)
  * Modify demotions so that they are generated for saucy