@@ -38,6 +38,7 @@ from .utils import get_arch
 from .DistUpgradeGettext import gettext as _
 from .janitor.plugincore.manager import PluginManager
 
+
 class DistUpgradeQuirks(object):
     """
     This class collects the various quirks handlers that can
@@ -49,7 +50,7 @@ class DistUpgradeQuirks(object):
         self.controller = controller
         self._view = controller._view
         self.config = config
-        self.uname = Popen(["uname","-r"], stdout=PIPE,
+        self.uname = Popen(["uname", "-r"], stdout=PIPE,
                            universal_newlines=True).communicate()[0].strip()
         self.arch = get_arch()
         self.plugin_manager = PluginManager(self.controller, ["./plugins"])
@@ -70,7 +71,7 @@ class DistUpgradeQuirks(object):
                                 in the cache
         - StartUpgrade: before the first package gets installed (but the
                         download is finished)
-        - PostUpgrade: run *after* the upgrade is finished successfully and 
+        - PostUpgrade: run *after* the upgrade is finished successfully and
                        packages got installed
         - PostCleanup: run *after* the cleanup (orphaned etc) is finished
         """
@@ -78,16 +79,18 @@ class DistUpgradeQuirks(object):
         if self.controller._partialUpgrade:
             logging.info("not running quirks in partialUpgrade mode")
             return
+        to_release = self.config.get("Sources", "To")
+        from_release = self.config.get("Sources", "From")
         # first check for matching plugins
         for condition in [
             quirksName,
-            "%s%s" %  (self.config.get("Sources","To"), quirksName),
-            "from_%s%s" % (self.config.get("Sources","From"), quirksName)
-            ]:
+            "%s%s" % (to_release, quirksName),
+            "from_%s%s" % (from_release, quirksName)
+                ]:
             for plugin in self.plugin_manager.get_plugins(condition):
                 logging.debug("running quirks plugin %s" % plugin)
                 plugin.do_cleanup_cruft()
-        
+
         # run the handler that is common to all dists
         funcname = "%s" % quirksName
         func = getattr(self, funcname, None)
@@ -96,14 +99,14 @@ class DistUpgradeQuirks(object):
             func()
 
         # run the quirksHandler to-dist
-        funcname = "%s%s" % (self.config.get("Sources","To"), quirksName)
+        funcname = "%s%s" % (to_release, quirksName)
         func = getattr(self, funcname, None)
         if func is not None:
             logging.debug("quirks: running %s" % funcname)
             func()
 
         # now run the quirksHandler from_${FROM-DIST}Quirks
-        funcname = "from_%s%s" % (self.config.get("Sources","From"), quirksName)
+        funcname = "from_%s%s" % (from_release, quirksName)
         func = getattr(self, funcname, None)
         if func is not None:
             logging.debug("quirks: running %s" % funcname)
@@ -121,16 +124,16 @@ class DistUpgradeQuirks(object):
         # of the "getArchitectures()" call in aptconfig and its not possible
         # currently to invalidate this cache
         if apt.apt_pkg.config.find("Apt::Architecture") == "amd64":
-            logging.debug("multiarch: enabling i386 as a additional architecture")
+            logging.debug(
+                "multiarch: enabling i386 as a additional architecture")
             apt.apt_pkg.config.set("Apt::Architectures::", "i386")
             # increase case size to workaround bug in natty apt that
             # may cause segfault on cache grow
             apt.apt_pkg.config.set("APT::Cache-Start", str(48*1024*1024))
 
-
     # individual quirks handler when the dpkg run is finished ---------
     def PostCleanup(self):
-        " run after cleanup " 
+        " run after cleanup "
         logging.debug("running Quirks.PostCleanup")
 
     # quirks when run when the initial apt-get update was run ----------------
@@ -139,7 +142,7 @@ class DistUpgradeQuirks(object):
             new distribution when upgrading from a lucid system (either
             to maverick or the new LTS)
         """
-        logging.debug("running %s" %  sys._getframe().f_code.co_name)
+        logging.debug("running %s" % sys._getframe().f_code.co_name)
         # systems < i686 will not upgrade
         self._test_and_fail_on_non_i686()
         self._test_and_warn_on_i8xx()
@@ -152,7 +155,7 @@ class DistUpgradeQuirks(object):
 
     def lucidPostInitialUpdate(self):
         """ quirks that are run before the sources.list is updated to lucid """
-        logging.debug("running %s" %  sys._getframe().f_code.co_name)
+        logging.debug("running %s" % sys._getframe().f_code.co_name)
         # upgrades on systems with < arvm6 CPUs will break
         self._test_and_fail_on_non_arm_v6()
         # vserver+upstart are problematic
@@ -162,14 +165,14 @@ class DistUpgradeQuirks(object):
 
     def nattyPostDistUpgradeCache(self):
         """
-        this function works around quirks in the 
+        this function works around quirks in the
         maverick -> natty cache upgrade calculation
         """
         self._add_kdegames_card_extra_if_installed()
 
     def maverickPostDistUpgradeCache(self):
         """
-        this function works around quirks in the 
+        this function works around quirks in the
         lucid->maverick upgrade calculation
         """
         self._add_extras_repository()
@@ -184,11 +187,12 @@ class DistUpgradeQuirks(object):
         self._killScreensaver()
         self._pokeScreensaver()
         self._stopDocvertConverter()
+
     def oneiricStartUpgrade(self):
         logging.debug("oneiric StartUpgrade quirks")
         # fix grub issue
         if (os.path.exists("/usr/sbin/update-grub") and
-            not os.path.exists("/etc/kernel/postinst.d/zz-update-grub")):
+                not os.path.exists("/etc/kernel/postinst.d/zz-update-grub")):
             # create a version of zz-update-grub to avoid depending on
             # the upgrade order. if that file is missing, we may end
             # up generating a broken grub.cfg
@@ -201,16 +205,17 @@ class DistUpgradeQuirks(object):
         # enable multiarch permanently
         if apt.apt_pkg.config.find("Apt::Architecture") == "amd64":
             self._enable_multiarch(foreign_arch="i386")
-            
+
     def from_hardyStartUpgrade(self):
         logging.debug("from_hardyStartUpgrade quirks")
         self._stopApparmor()
+
     # helpers
     def _get_pci_ids(self):
         """ return a set of pci ids of the system (using lspci -n) """
         lspci = set()
         try:
-            p = subprocess.Popen(["lspci","-n"], stdout=subprocess.PIPE,
+            p = subprocess.Popen(["lspci", "-n"], stdout=subprocess.PIPE,
                                  universal_newlines=True)
         except OSError:
             return lspci
@@ -222,13 +227,14 @@ class DistUpgradeQuirks(object):
     def _test_and_warn_for_unity_3d_support(self):
         UNITY_SUPPORT_TEST = "/usr/lib/nux/unity_support_test"
         if (not os.path.exists(UNITY_SUPPORT_TEST) or
-            not "DISPLAY" in os.environ):
+                not "DISPLAY" in os.environ):
             return
         # see if there is a running unity, that service is used by both 2d,3d
         return_code = subprocess.call(
-            ["ps","-C","unity-panel-service"], stdout=open(os.devnull, "w"))
+            ["ps", "-C", "unity-panel-service"], stdout=open(os.devnull, "w"))
         if return_code != 0:
-            logging.debug("_test_and_warn_for_unity_3d_support: no unity running")
+            logging.debug(
+                "_test_and_warn_for_unity_3d_support: no unity running")
             return
         # if we are here, we need to test and warn
         return_code = subprocess.call([UNITY_SUPPORT_TEST])
@@ -240,23 +246,25 @@ class DistUpgradeQuirks(object):
                 _("Your graphics hardware may not be fully supported in "
                   "Ubuntu 13.10."),
                 _("Running the 'unity' desktop environment is not fully "
-                  "supported by your graphics hardware. You will maybe end up in "
-                  "a very slow environment after the upgrade. Our advice is to keep "
-                  "the LTS version for now. For more information see "
-                  "https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForUnity3D "
+                  "supported by your graphics hardware. You will maybe end "
+                  "up in a very slow environment after the upgrade. Our "
+                  "advice is to keep the LTS version for now. For more "
+                  "information see "
+                  "https://wiki.ubuntu.com/X/Bugs/"
+                  "UpdateManagerWarningForUnity3D "
                   "Do you still want to continue with the upgrade?")
                 )
-            if res == False:
+            if not res:
                 self.controller.abort()
 
     def _test_and_warn_on_i8xx(self):
-        I8XX_PCI_IDS = ["8086:7121", # i810
-                        "8086:7125", # i810e
-                        "8086:1132", # i815
-                        "8086:3577", # i830
-                        "8086:2562", # i845
-                        "8086:3582", # i855
-                        "8086:2572", # i865
+        I8XX_PCI_IDS = ["8086:7121",  # i810
+                        "8086:7125",  # i810e
+                        "8086:1132",  # i815
+                        "8086:3577",  # i830
+                        "8086:2562",  # i845
+                        "8086:3582",  # i855
+                        "8086:2572",  # i865
                         ]
         lspci = self._get_pci_ids()
         if set(I8XX_PCI_IDS).intersection(lspci):
@@ -270,9 +278,8 @@ class DistUpgradeQuirks(object):
                   "https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForI8xx "
                   "Do you want to continue with the upgrade?")
                 )
-            if res == False:
+            if not res:
                 self.controller.abort()
-
 
     def _test_and_warn_on_dropped_fglrx_support(self):
         """
@@ -281,31 +288,37 @@ class DistUpgradeQuirks(object):
         """
         # this is to deal with the fact that support for some of the cards
         # that fglrx used to support got dropped
-        if (self._checkVideoDriver("fglrx") and 
-            not self._supportInModaliases("fglrx")):
-             res = self._view.askYesNoQuestion(_("Upgrading may reduce desktop "
-                                         "effects, and performance in games "
-                                         "and other graphically intensive "
-                                         "programs."),
-                                       _("This computer is currently using "
-                                         "the AMD 'fglrx' graphics driver. "
-                                         "No version of this driver is "
-                                         "available that works with your "
-                                         "hardware in Ubuntu "
-                                         "10.04 LTS.\n\nDo you want to continue?"))
-             if res == False:
-                 self.controller.abort()
-             # if the user wants to continue we remove the fglrx driver
-             # here because its no use (no support for this card)
-             logging.debug("remove xorg-driver-fglrx,xorg-driver-fglrx-envy,fglrx-kernel-source")
-             l=self.controller.config.getlist("Distro","PostUpgradePurge")
-             l.append("xorg-driver-fglrx")
-             l.append("xorg-driver-fglrx-envy")
-             l.append("fglrx-kernel-source")
-             l.append("fglrx-amdcccle")
-             l.append("xorg-driver-fglrx-dev")
-             l.append("libamdxvba1")
-             self.controller.config.set("Distro","PostUpgradePurge",",".join(l))
+        if (self._checkVideoDriver("fglrx") and
+                not self._supportInModaliases("fglrx")):
+            res = self._view.askYesNoQuestion(
+                _("Upgrading may reduce desktop "
+                  "effects, and performance in games "
+                  "and other graphically intensive "
+                  "programs."),
+                _("This computer is currently using "
+                  "the AMD 'fglrx' graphics driver. "
+                  "No version of this driver is "
+                  "available that works with your "
+                  "hardware in Ubuntu 10.04 LTS.\n\n"
+                  "Do you want to continue?"))
+            if not res:
+                self.controller.abort()
+            # if the user wants to continue we remove the fglrx driver
+            # here because its no use (no support for this card)
+            removals = [
+                "xorg-driver-fglrx",
+                "xorg-driver-fglrx-envy",
+                "fglrx-kernel-source",
+                "fglrx-amdcccle",
+                "xorg-driver-fglrx-dev",
+                "libamdxvba1"
+                ]
+            logging.debug("remove %s" % ", ".join(removals))
+            l = self.controller.config.getlist("Distro", "PostUpgradePurge")
+            for remove in removals:
+                l.append(remove)
+            self.controller.config.set("Distro", "PostUpgradePurge",
+                                       ",".join(l))
 
     def _test_and_fail_on_non_i686(self):
         """
@@ -346,15 +359,15 @@ class DistUpgradeQuirks(object):
                 return False
         return True
 
-
     def _test_and_fail_on_non_arm_v6(self):
-        """ 
+        """
         Test and fail if the cpu is not a arm v6 or greater,
         from 9.10 on we do no longer support those CPUs
         """
         if self.arch == "armel":
             if not self._checkArmCPU():
-                self._view.error(_("No ARMv6 CPU"),
+                self._view.error(
+                    _("No ARMv6 CPU"),
                     _("Your system uses an ARM CPU that is older "
                       "than the ARMv6 architecture. "
                       "All packages in karmic were built with "
@@ -382,10 +395,9 @@ class DistUpgradeQuirks(object):
                   "environment, requiring an update to your virtual "
                   "machine configuration first.\n\n"
                   "Are you sure you want to continue?"))
-            if res == False:
+            if not res:
                 self.controller.abort()
             self._view.processEvents()
-
 
     def _checkArmCPU(self):
         """
@@ -396,47 +408,55 @@ class DistUpgradeQuirks(object):
             logging.error("cannot open /proc/cpuinfo ?!?")
             return False
         cpuinfo = open("/proc/cpuinfo")
-        if re.search("^Processor\s*:\s*ARMv[45]", cpuinfo.read(), re.MULTILINE):
+        if re.search("^Processor\s*:\s*ARMv[45]", cpuinfo.read(),
+                     re.MULTILINE):
             return False
         return True
-
 
     def _stopApparmor(self):
         """ /etc/init.d/apparmor stop (see bug #559433)"""
         if os.path.exists("/etc/init.d/apparmor"):
             logging.debug("/etc/init.d/apparmor stop")
-            subprocess.call(["/etc/init.d/apparmor","stop"])
+            subprocess.call(["/etc/init.d/apparmor", "stop"])
+
     def _stopDocvertConverter(self):
         " /etc/init.d/docvert-converter stop (see bug #450569)"
         if os.path.exists("/etc/init.d/docvert-converter"):
             logging.debug("/etc/init.d/docvert-converter stop")
-            subprocess.call(["/etc/init.d/docvert-converter","stop"])
+            subprocess.call(["/etc/init.d/docvert-converter", "stop"])
+
     def _killUpdateNotifier(self):
         "kill update-notifier"
         # kill update-notifier now to suppress reboot required
         if os.path.exists("/usr/bin/killall"):
             logging.debug("killing update-notifier")
-            subprocess.call(["killall","-q","update-notifier"])
+            subprocess.call(["killall", "-q", "update-notifier"])
+
     def _killKBluetooth(self):
         """killall kblueplugd kbluetooth (riddel requested it)"""
         if os.path.exists("/usr/bin/killall"):
             logging.debug("killing kblueplugd kbluetooth4")
             subprocess.call(["killall", "-q", "kblueplugd", "kbluetooth4"])
+
     def _killScreensaver(self):
         """killall gnome-screensaver """
         if os.path.exists("/usr/bin/killall"):
             logging.debug("killing gnome-screensaver")
             subprocess.call(["killall", "-q", "gnome-screensaver"])
+
     def _pokeScreensaver(self):
-        if os.path.exists("/usr/bin/xdg-screensaver") and os.environ.get('DISPLAY') :
+        if (os.path.exists("/usr/bin/xdg-screensaver") and
+                os.environ.get('DISPLAY')):
             logging.debug("setup poke timer for the scrensaver")
+            cmd = "while true;"
+            cmd += " do /usr/bin/xdg-screensaver reset >/dev/null 2>&1;"
+            cmd += " sleep 30; done"
             try:
-                self._poke = subprocess.Popen(
-                    "while true; do /usr/bin/xdg-screensaver reset >/dev/null 2>&1; sleep 30; done",
-                    shell=True)
+                self._poke = subprocess.Popen(cmd, shell=True)
                 atexit.register(self._stopPokeScreensaver)
             except:
                 logging.exception("failed to setup screensaver poke")
+
     def _stopPokeScreensaver(self):
         res = False
         if self._poke is not None:
@@ -448,7 +468,6 @@ class DistUpgradeQuirks(object):
             self._poke = None
         return res
 
-
     def _removeOldApportCrashes(self):
         " remove old apport crash files and whoopsie control files "
         try:
@@ -459,27 +478,24 @@ class DistUpgradeQuirks(object):
         except Exception as e:
             logging.warning("error during unlink of old crash files (%s)" % e)
 
-
     def _checkVideoDriver(self, name):
         " check if the given driver is in use in xorg.conf "
-        XORG="/etc/X11/xorg.conf"
+        XORG = "/etc/X11/xorg.conf"
         if not os.path.exists(XORG):
             return False
         for line in open(XORG):
-            s=line.split("#")[0].strip()
+            s = line.split("#")[0].strip()
             # check for fglrx driver entry
             if (s.lower().startswith("driver") and
-                s.endswith('"%s"' % name)):
+                    s.endswith('"%s"' % name)):
                 return True
         return False
 
     def _applyPatches(self, patchdir="./patches"):
         """
         helper that applies the patches in patchdir. the format is
-        _path_to_file.md5sum
-        
-        and it will apply the diff to that file if the md5sum
-        matches
+        _path_to_file.md5sum and it will apply the diff to that file if the
+        md5sum matches
         """
         if not os.path.exists(patchdir):
             logging.debug("no patchdir")
@@ -493,16 +509,16 @@ class DistUpgradeQuirks(object):
             (encoded_path, md5sum, result_md5sum) = f.rsplit(".", 2)
             # FIXME: this is not clever and needs quoting support for
             #        filenames with "_" in the name
-            path = encoded_path.replace("_","/")
+            path = encoded_path.replace("_", "/")
             logging.debug("target for '%s' is '%s' -> '%s'" % (
-                    f, encoded_path, path))
+                f, encoded_path, path))
             # target does not exist
             if not os.path.exists(path):
                 logging.debug("target '%s' does not exist" % path)
                 continue
             # check the input md5sum, this is not strictly needed as patch()
             # will verify the result md5sum and discard the result if that
-            # does not match but this will remove a misleading error in the 
+            # does not match but this will remove a misleading error in the
             # logs
             md5 = hashlib.md5()
             with open(path, "rb") as fd:
@@ -520,12 +536,12 @@ class DistUpgradeQuirks(object):
                 logging.info("applied '%s' successfully" % f)
             except Exception:
                 logging.exception("ed failed for '%s'" % f)
-                    
+
     def _supportInModaliases(self, pkgname, lspci=None):
-        """ 
+        """
         Check if pkgname will work on this hardware
 
-        This helper will check with the modaliasesdir if the given 
+        This helper will check with the modaliasesdir if the given
         pkg will work on this hardware (or the hardware given
         via the lspci argument)
         """
@@ -534,23 +550,26 @@ class DistUpgradeQuirks(object):
             lspci = self._get_pci_ids()
         # get pkg
         if (not pkgname in self.controller.cache or
-            not self.controller.cache[pkgname].candidate):
+                not self.controller.cache[pkgname].candidate):
             logging.warn("can not find '%s' in cache")
             return False
         pkg = self.controller.cache[pkgname]
-        for (module, pciid_list) in self._parse_modaliases_from_pkg_header(pkg.candidate.record):
+        for (module, pciid_list) in \
+                self._parse_modaliases_from_pkg_header(pkg.candidate.record):
             for pciid in pciid_list:
                 m = re.match("pci:v0000(.+)d0000(.+)sv.*", pciid)
                 if m:
                     matchid = "%s:%s" % (m.group(1), m.group(2))
                     if matchid.lower() in lspci:
-                        logging.debug("found system pciid '%s' in modaliases" % matchid)
+                        logging.debug("found system pciid '%s' in modaliases"
+                                      % matchid)
                         return True
-        logging.debug("checking for %s support in modaliases but none found" % pkgname)
+        logging.debug("checking for %s support in modaliases but none found"
+                      % pkgname)
         return False
-                    
+
     def _parse_modaliases_from_pkg_header(self, pkgrecord):
-        """ return a list of (module1, (pciid, ...), (module2, (pciid, ...)))"""
+        """ return a list of (module1, (pciid, ...), ...)"""
         if not "Modaliases" in pkgrecord:
             return []
         # split the string
@@ -560,7 +579,7 @@ class DistUpgradeQuirks(object):
             if not m:
                 continue
             (module, pciids) = m.split("(")
-            modules.append ((module, [x.strip() for x in pciids.split(",")]))
+            modules.append((module, [x.strip() for x in pciids.split(",")]))
         return modules
 
     def _add_extras_repository(self):
@@ -582,7 +601,7 @@ class DistUpgradeQuirks(object):
                     break
             else:
                 logging.info("no extras.ubuntu.com, adding it to sources.list")
-                sources.add("deb","http://extras.ubuntu.com/ubuntu",
+                sources.add("deb", "http://extras.ubuntu.com/ubuntu",
                             self.controller.toDist, ["main"],
                             "Third party developers repository")
                 sources.save()
@@ -597,8 +616,8 @@ class DistUpgradeQuirks(object):
         try:
             cache = self.controller.cache
             if ("foomatic-db-gutenprint" in cache and
-                cache["foomatic-db-gutenprint"].marked_delete and
-                "ijsgutenprint-ppds" in cache):
+                    cache["foomatic-db-gutenprint"].marked_delete and
+                    "ijsgutenprint-ppds" in cache):
                 logging.info("installing ijsgutenprint-ppds")
                 cache.mark_install(
                     "ijsgutenprint-ppds",
@@ -618,7 +637,7 @@ class DistUpgradeQuirks(object):
 
     def _add_kdegames_card_extra_if_installed(self):
         """ test if kdegames-card-data is installed and if so,
-            add kdegames-card-data-extra so that users do not 
+            add kdegames-card-data-extra so that users do not
             loose functionality (LP: #745396)
         """
         try:
@@ -627,20 +646,21 @@ class DistUpgradeQuirks(object):
                     "kdegames-card-data-extra" in cache):
                 return
             if (cache["kdegames-card-data"].is_installed or
-                cache["kdegames-card-data"].marked_install):
+                    cache["kdegames-card-data"].marked_install):
                 cache.mark_install(
                     "kdegames-card-data-extra",
                     "kdegames-card-data -> k-c-d-extra transition")
         except:
             logging.exception("_add_kdegames_card_extra_if_installed failed")
-        
+
     def ensure_recommends_are_installed_on_desktops(self):
-        """ ensure that on a desktop install recommends are installed 
+        """ ensure that on a desktop install recommends are installed
             (LP: #759262)
         """
         import apt
         if not self.controller.serverMode:
             if not apt.apt_pkg.config.find_b("Apt::Install-Recommends"):
-                logging.warn("Apt::Install-Recommends was disabled, enabling it just for the upgrade")
+                msg = "Apt::Install-Recommends was disabled,"
+                msg += " enabling it just for the upgrade"
+                logging.warn(msg)
                 apt.apt_pkg.config.set("Apt::Install-Recommends", "1")
-
