@@ -4,6 +4,7 @@ ubuntu-release-upgrader (1:0.202) UNRELEASED; urgency=low
   * DistUpgradeQuirks.py: when removing .crash files also remove whoopsie
     .upload and .uploaded files
   * Remove some additional unnecessary quirks
+  * DistUpgradeQuirks.py: pep8 cleanup
 
   [ Steve Langasek ]
   * Drop all quirks for upgrades prior to the karmic->lucid upgrade; all
